force-app/main/default/objects/Lote__c/Lote__c.object-meta.xml
<CustomObject>
    <label>Lote</label>
    <nameField>
        <label>Nombre de Lote</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>