force-app/main/default/objects/Lote__c/fields/Costo_total__c.field-meta.xml
<CustomField>
    <fullName>Costo_total__c</fullName>
    <label>Costo total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>