force-app/main/default/objects/Lote__c/fields/Ex_propietario__c.field-meta.xml
<CustomField>
    <fullName>Ex_propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ex propietario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Propietario</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lotes</relationshipLabel>
    <relationshipName>Lotes</relationshipName>
    <type>Lookup</type>
</CustomField>