force-app/main/default/objects/Lote__c/fields/Fecha_boleto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_boleto__c</fullName>
    <label>Fecha boleto</label>
    <type>Date</type>
</CustomField>