force-app/main/default/objects/Lote__c/fields/Fecha_de_Boleto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Boleto__c</fullName>
    <label>Fecha de Boleto</label>
    <type>Date</type>
</CustomField>