force-app/main/default/objects/Lote__c/fields/Fecha_de_Posesion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Posesion__c</fullName>
    <label>Fecha de Posesión</label>
    <type>Date</type>
</CustomField>