force-app/main/default/objects/Lote__c/fields/Fecha_escritura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_escritura__c</fullName>
    <label>Fecha escritura</label>
    <type>Date</type>
</CustomField>