force-app/main/default/objects/Lote__c/fields/Fecha_expediente_unificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_expediente_unificaci_n__c</fullName>
    <label>Fecha expediente unificación</label>
    <type>Date</type>
</CustomField>