force-app/main/default/objects/Lote__c/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Financiado</fullName>
            </value>
            <value>
                <fullName>Mixto</fullName>
            </value>
            <value>
                <fullName>Permuta por metros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>