force-app/main/default/objects/Lote__c/fields/Importe_Saldado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Saldado__c</fullName>
    <label>Importe Saldado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>