force-app/main/default/objects/Lote__c/fields/Lote_unificado__c.field-meta.xml
<CustomField>
    <fullName>Lote_unificado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote unificado</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Lotes</relationshipLabel>
    <relationshipName>Lotes</relationshipName>
    <type>Lookup</type>
</CustomField>