force-app/main/default/objects/Lote__c/fields/Nomenclatura_catastral__c.field-meta.xml
<CustomField>
    <fullName>Nomenclatura_catastral__c</fullName>
    <label>Nomenclatura catastral</label>
    <length>20</length>
    <type>Text</type>
</CustomField>