force-app/main/default/objects/Lote__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>