force-app/main/default/objects/Lote__c/fields/Partida_inmobiliaria__c.field-meta.xml
<CustomField>
    <fullName>Partida_inmobiliaria__c</fullName>
    <label>Partida inmobiliaria</label>
    <length>20</length>
    <type>Text</type>
</CustomField>