force-app/main/default/objects/Lote__c/fields/Saldado__c.field-meta.xml
<CustomField>
    <fullName>Saldado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saldado</label>
    <type>Checkbox</type>
</CustomField>