force-app/main/default/objects/Lote__c/fields/Sociedad_Asociada__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_Asociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sociedad Asociada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lotes (Sociedad Asociada)</relationshipLabel>
    <relationshipName>Lotes1</relationshipName>
    <type>Lookup</type>
</CustomField>